# ChiikaApi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  log4cplusconfig  rungcc.sh
CMake/Modules/: FindChiikaApi.cmake  FindPugiXML.cmake  macros.cmake
ChiikaAPI/: CMakeLists.txt
ChiikaAPI/Common/: Anime.cpp  Anime.h  ApiVersion.h  BoostHeaders.h  Config.h  ExceptionManager.cpp  ExceptionManager.h  Manga.cpp  Manga.h  MyAnimeList.cpp  MyAnimeList.h  MyAnimelistUtility.cpp  MyAnimelistUtility.h  PlatformInformation.h  Required.h  Singleton.h  Stable.cpp  Stable.h  StdHeaders.h  UserInfo.cpp  UserInfo.h  UtfTools.cpp  UtfTools.h  UtilityDefines.h
ChiikaAPI/Database/: Globals.h  JsKeys.h  LocalDataManager.cpp  LocalDataManager.h
ChiikaAPI/HelloWorld/: .gitignore  CMakeLists.txt  api_test_helloworld.cpp
ChiikaAPI/Logging/: ChiString.cpp  ChiString.h  FileHelper.cpp  FileHelper.h  Log.cpp  Log.h  LogManager.cpp  LogManager.h
ChiikaAPI/Memory/: AlignedAllocator.cpp  AlignedAllocator.h  CustomMemoryAllocatedObject.cpp  CustomMemoryAllocatedObject.h  MemoryAllocator.h  NedPooling.cpp  NedPooling.h  STLAllocator.h  StdAlloc.h
ChiikaAPI/Recognition/: AnimeRecognition.cpp  AnimeRecognition.h  MPRecognitionInterface.cpp  MPRecognitionInterface.h  MediaPlayerList.h  MediaPlayerRecognitionManager.cpp  MediaPlayerRecognitionManager.h  WindowsMediaDetection.cpp  WindowsMediaDetection.h
ChiikaAPI/Request/: AccountVerify.cpp  AccountVerify.h  AddToAnimeList.cpp  AddToAnimeList.h  CurlRequest.cpp  CurlRequest.h  DownloadImage.cpp  DownloadImage.h  GetAnimeList.cpp  GetAnimeList.h  GetMyAnimelist.cpp  GetMyAnimelist.h  GetMyMangalist.cpp  GetMyMangalist.h  MalAjax.cpp  MalAjax.h  MalAnimePageScrape.cpp  MalAnimePageScrape.h  MalManager.cpp  MalManager.h  MalScrape.cpp  MalScrape.h  MalUserPageScrape.cpp  MalUserPageScrape.h  ParsingManager.cpp  ParsingManager.h  RequestInterface.cpp  RequestInterface.h  RequestList.h  RequestListener.h  RequestManager.cpp  RequestManager.h  SearchAnime.cpp  SearchAnime.h  SenpaiMoe.cpp  SenpaiMoe.h  UpdateAnime.cpp  UpdateAnime.h
ChiikaAPI/Root/: Root.cpp  Root.h  ThreadManager.cpp  ThreadManager.h
ChiikaAPI/Seasons/: SeasonManager.cpp  SeasonManager.h
ChiikaAPI/Settings/: OptionList.h  Settings.cpp  Settings.h
ChiikaAPI/Tests/: CMakeLists.txt  Mock_ThreadedRequest.cpp  Mock_ThreadedRequest.h  Senpai.moe  all_tests.cpp  api_mal_requests.cpp  api_mal_requests.h  api_mal_search.cpp  api_string_unittest.cpp  api_string_unittest.h  api_test_helloworld.cpp  test_runner.cpp
ChiikaAPI/Tests/HelloWorld/: CMakeLists.txt  api_test_helloworld.cpp
ChiikaAPI/Tests/TestApp/: main_linux.cpp  main_win.cpp
ChiikaAPI/Tests/json/: ClosestAnimeFromSenpaiTest.json  getAnimeListResponse.xml  index.html
config/: log4cplusconfig
